sdm845-common: Update overlays
* Enable MultiUser Ui
* Enable config for bluetooth_hfp_inband_ringing_support
* Enable Inflate Signal Strength
* Enable Adaptive Sleep

Co-authored-by: rk779 <rahulkrishna585@gmail.com>
Co-authored-by: andr68rus <ashtmb@gmail.com>
Co-authored-by: xyyx <xyyx@mail.ru>
Signed-off-by: PainKiller3 <ninadpatil100@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -401,5 +401,21 @@
 
     <!-- The name of the package that will hold the assistant role by default. -->
     <string name="config_defaultAssistant" translatable="false">com.google.android.googlequicksearchbox</string>
+
+    <!-- Whether UI for multi user should be shown -->
+    <bool name="config_enableMultiUserUI">true</bool>
+
+    <!--  Maximum number of supported users -->
+    <integer name="config_multiuserMaximumUsers">4</integer>
+
+    <!-- Boolean indicating if current platform supports HFP inband ringing -->
+    <bool name="config_bluetooth_hfp_inband_ringing_support">true</bool>
+
+    <!-- Whether to artificially interpret all signal strengths as
+         one bar higher than they actually are -->
+    <bool name="config_inflateSignalStrength">true</bool>
+
+    <!-- Flag indicating whether we should enable the adaptive sleep.-->
+    <bool name="config_adaptive_sleep_available">true</bool>
 </resources>
 
