--- a/PocoParts/res/drawable/ic_poco.xml
+++ b/PocoParts/res/drawable/ic_poco.xml
@@ -8,7 +8,8 @@
     android:viewportHeight="24">
     <path
         android:name="path"
-        android:pathData="M 7 6 L 7 19 L 10 19 L 10 14 L 13 14 C 18 14 18 7 13 6 L 7 6 Z M 10 8 L 12 8 C 13 8 14 9 14 10 C 14 11 13 12 12 12 L 10 12 L 10 8 Z"
+        android:pathData="M 21.9 24 L 21.3 24 L 21.3 3.2 C 21.3 2.3 20.6 1.6 19.6 1.6 L 17 1.6 C 16.7 1.6 16.4 1.8 16.4 2.1 L 16.4 2.2 C 16.4 2.6 16 3 15.6 3 L 8.2 3 C 7.8 3 7.4 2.7 7.4 2.2 C 7.4 1.9 7.1 1.7 6.8 1.7 L 4.3 1.7 C 3.4 1.7 2.6 2.4 2.6 3.3 L 2.6 24 L 2 24 L 2 2.7 C 2 1.6 3 0.7 4.2 0.7 L 19.8 0.7 C 21 0.7 22 1.6 22 2.7 L 22 24 Z M 8.8 1.5 C 9 1.5 9.2 1.7 9.2 1.9 C 9.2 2.1 9 2.3 8.8 2.3 C 8.5 2.3 8.3 2.1 8.3 1.9 C 8.3 1.6 8.5 1.5 8.8 1.5 Z M 10.1 1.6 C 10.2 1.6 10.4 1.7 10.4 1.9 C 10.4 2.1 10.3 2.1 10.1 2.1 C 10 2.1 9.9 2 9.9 1.9 C 9.9 1.8 10 1.6 10.1 1.6 Z M 15.1 1.5 C 14.9 1.5 14.7 1.7 14.7 1.9 C 14.7 2.1 14.9 2.3 15.1 2.3 C 15.3 2.3 15.5 2.1 15.5 1.9 C 15.5 1.6 15.3 1.5 15.1 1.5 Z M 13.7 1.6 C 13.6 1.6 13.4 1.7 13.4 1.9 C 13.4 2.1 13.5 2.1 13.7 2.1 C 13.9 2.1 14 2 14 1.9 C 14 1.8 13.9 1.6 13.7 1.6 Z M 11.3 1.7 L 12.6 1.7 C 12.7 1.7 12.8 1.8 12.8 1.9 C 12.8 2 12.7 2.1 12.6 2.1 L 11.3 2.1 C 11.2 2.1 11.1 2 11.1 1.9 C 11.1 1.8 11.2 1.7 11.3 1.7 Z"
         android:fillColor="#000"
-        android:strokeWidth="1"/>
+        android:strokeWidth="1"
+        android:fillType="evenOdd"/>
 </vector>
